<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BLE Cardiac Monitor</string>
    <string name="title_activity_session_manager">Sessions</string>
    <string name="title_activity_devices">BLE Device Scan</string>
    <string name="title_activity_device_scan">Select BLE Device</string>
    <string name="title_activity_plot">Plot</string>
    <string name="title_activity_settings">Settings</string>
    <string name="device_monitor_name">BLE Cardiac Monitor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">Bluetooth LE is not supported.</string>
    <string name="permission_location">Scanning disabled
        \n\nACCESS_FINE_LOCATION permission must be granted to scan for Bluetooth devices.
        \n\nYou may have to grant this manually for BLE Explorer in Settings.</string>
    <string name="permission_not_granted">All of the necessary permissions for this application to work properly have not been granted. You can change the permissions in Settings | apps.</string>
    <string name="label_data">Data: </string>
    <string name="label_device_name">Device name: </string>
    <string name="label_device_address">Device address: </string>
    <string name="label_hr">Heart Rate: </string>
    <string name="label_rr">R-R: </string>
    <string name="hr_title">HR and RR vs. Time</string>
    <string name="hr_range_title">HR, /sec RR, ms/10</string>
    <string name="hr_domain_title">Time</string>
    <string name="label_bat">Battery Level: </string>
    <string name="label_act">Activity: </string>
    <string name="label_pa">Peak Acceleration: </string>
    <string name="label_state">State: </string>
    <string name="label_status">Status: </string>
    <string name="no_data">NA</string>
    <!--suppress CheckTagEmptyBody -->
    <string name="empty"></string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported.</string>
    <string name="error_bluetooth_manager">Bluetooth manager not found.</string>
    <string name="error_bluetooth_adapter">Error getting Bluetooth adapter.</string>

    <string name="view_info">View Info</string>
    <string name="scan_prompt">The current device may not be found in the scan, since it is still connected.  Continue?</string>
    <string name="session_delete_prompt">Deleting %d sessions.  This cannot be undone.  Continue?</string>
    <string name="session_bad_times_delete_prompt" formatted="false">%s:\nThe end date %d is before the start date %d.\nOK to delete just the end date?\n(You may have to redo any remaining sessions)</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="unknown_characteristic">Unknown Characteristic</string>
    <string name="unknown_service">Unknown Service</string>
    <string name="select_restore_file">Select File to Restore</string>
    <string name="delete_prompt">All existing data will be deleted and it may take a while</string>
    <string name="restoring_database_progress_text">Restoring&#8230;\n(Can take a long time)</string>
    <string name="select_replace_database">Select replacement database</string>
    <string name="null_uuid_msg">Received null uuid</string>
    <string name="null_error_msg">Received null error message</string>

    <!-- Service -->
    <string name="service_notification_title">BLE Cardiac Monitor</string>
    <string name="service_notification_text">"BCM BLE Service is running"</string>
    <string name="exception_msg_format">Exception: %s</string>
    <string name="not_available">NA</string>
    <string name="default_notification_channel_id">BCM_BLE_Service_Default</string>
    <string name="default_notification_description">BCM BLE Service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_select_device">Select Device</string>
    <string name="menu_test">Test</string>
    <string name="menu_plot">Plot</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_merge">Merge</string>
    <string name="menu_zoom_reset">Reset Pan/Zoom</string>
    <string name="menu_split">Split</string>
    <string name="menu_save">Save Sessions</string>
    <string name="menu_save_combined">Save As Combined Session</string>
    <string name="menu_save_gpx">Save Sessions As GPX</string>
    <string name="menu_session_manager">Session Manager</string>
    <string name="menu_start_now">Start Now</string>
    <string name="menu_check_all">Check All</string>
    <string name="menu_check_none">Check None</string>
    <string name="menu_save_database_cvs">Save Database as CSV</string>
    <string name="menu_restore_database_cvs">Restore Database from CSV</string>
    <string name="menu_save_database">Save Database</string>
    <string name="menu_restore_database">Replace Database</string>
    <string name="menu_restoring">Restoring</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_read_battery_level">Get Battery level</string>
    <string name="info_item">Info</string>
    <string name="choose_data_directory_item">Choose Data Directory</string>

    <!-- Preferences -->
    <string name="monitor_preferences">Monitor Settings</string>
    <string name="title_hr_preference">HR</string>
    <string name="summary_hr_preference">Do HR (next connection)</string>
    <string name="title_custom_preference">Custom</string>
    <string name="summary_custom_preference">Do Custom (next connection)</string>
    <string name="title_battery_preference">Battery</string>
    <string name="summary_battery_preference">Do Battery (next connection)</string>
    <string name="plot_preferences">Plot Settings</string>
    <string name="title_plot_hr_preference">HR</string>
    <string name="summary_plot_hr_preference">Plot the HR</string>
    <string name="title_plot_rr_preference">RR</string>
    <string name="summary_plot_rr_preference">Plot the RR</string>
    <string name="title_plot_act_preference">Activity</string>
    <string name="summary_plot_act_preference">Plot the Activity (Custom)</string>
    <string name="title_plot_pa_preference">Peak Acceleration</string>
    <string name="summary_plot_pa_preference">Plot the Peak Acceleration (Custom)</string>
    <string name="title_plot_interval_preference">Real-Time Plot Interval</string>
    <string name="summary_plot_interval_preference">The length of the real-time plot interval</string>
    <string name="dialog_title_plot_interval_preference">Enter the interval in min</string>

    <!-- Info/Help -->
    <string name="help_url_not_found">Cannot find Help URL</string>
    <string name="help_item">Help</string>
    <string name="help_title">Help</string>
    <string name="help_show_error">Error showing help</string>

    <!-- Utils -->
    <string name="error">Error</string>
    <string name="exception">Exception</string>
    <string name="info">Info</string>
    <string name="ok">OK</string>
    <string name="warning">Warning</string>

</resources>