<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/plot_preferences">
        <CheckBoxPreference
                android:key="plotHrPreference"
                android:defaultValue="true"
                android:title="@string/title_plot_hr_preference"
                android:summary="@string/summary_plot_hr_preference" />
        <CheckBoxPreference
                android:key="plotRrPreference"
                android:defaultValue="true"
                android:title="@string/title_plot_rr_preference"
                android:summary="@string/summary_plot_rr_preference" />
        <EditTextPreference
                android:key="plotIntervalPreference"
                android:defaultValue="5"
                android:title="@string/title_plot_interval_preference"
                android:summary="@string/summary_plot_interval_preference"
                android:dialogTitle="@string/dialog_title_plot_interval_preference" />
    </PreferenceCategory>
</PreferenceScreen>