<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
    <item android:id="@+id/menu_start_now"
        app:showAsAction="never"
        android:orderInCategory="1"
        android:title="@string/menu_start_now" />
    -->
    <item android:id="@+id/menu_zoom_reset"
          app:showAsAction="never"
          android:orderInCategory="1"
          android:title="@string/menu_zoom_reset" />
    <item android:id="@+id/menu_refresh"
          app:showAsAction="never"
          android:orderInCategory="2"
          android:title="@string/menu_refresh" />
    <item android:id="@+id/get_view_info"
        app:showAsAction="never"
        android:orderInCategory="3"
        android:title="@string/view_info" />
</menu>
