<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.kenevans.android.blecardiacmonitor.PlotActivity" >

    <!-- Old constraint attributes
        android:layout_marginTop="345dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
    -->

    <com.androidplot.xy.XYPlot
        android:id="@+id/plot"
        style="@style/FullScreenGraph"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:paddingTop="5dp"
        app:paddingBottom="5dp"
        app:paddingLeft="5dp"
        app:paddingRight="5dp"
        app:backgroundColor="#000000"

        app:gridBackgroundColor="#000000"
        app:graphBackgroundColor="#000000"
        app:graphMarginTop="20dp"
        app:graphMarginBottom="20dp"
        app:graphMarginLeft="30dp"
        app:graphMarginRight="5dp"
        app:gridInsetLeft="25dp"
        app:gridInsetBottom="20dp"
        app:title="@string/hr_title"
        app:titleTextColor="#000000"
        app:titleTextSize="15dp"
        app:rangeTitle="@string/hr_range_title"
        app:rangeOriginLineColor="#555555"
        app:rangeLineColor="#555555"
        app:rangeTitleTextColor="#FFFFFF"
        app:rangeTitleTextSize="14dp"
        app:domainTitle="@string/hr_domain_title"
        app:domainOriginLineColor="#555555"
        app:domainLineColor="#555555"
        app:domainTitleTextColor="#FFFFFF"
        app:domainTitleTextSize="14dp"

        app:lineLabels="left|bottom"
        app:renderMode="use_background_thread"
        />

</RelativeLayout>
